# reminder

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypi-publish.yml  python-package.yml
reminder/: __info__.py
src/reminder/: __info__.py  __init__.py  __main__.py
