[metadata]
name = reminder-detector
version = file: reminder/VERSION.txt
author = Alexandre D'Hondt
author_email = alexandre.dhondt@gmail.com
home_page = https://github.com/packing-box/REMINDer
description = Implementation of the packing detection heuristic from the paper "Packed PE File Detection for Malware Forensics" of Han et al.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    packing
    packed-executable
    packing-detection
license = GPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security

[options]
packages = find:
include_package_data = False
install_requires =
    lief
setup_requires = setuptools
python_requires = >=3.6.0,<4

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    reminder = reminder.__main__:main
